# torch-sexpr

./: README.md  flake.nix  pyproject.toml
torch_sexpr/: parse.py
