[tool.poetry]
name = "torch-sexpr"
version = "0.1.0"
description = "Parse S-expressions into PyTorch architectures, losses and optimizers"
authors = ["Felix <git@flx.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torch_sexpr"}]

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.10"
setuptools = "^65.6.3"
sexpdata = "0.0.3"
torch = "1.12.1"
torchmetrics = "^0.11.1"

[tool.poetry.scripts]
torch-sexpr-parse-loss = "torch_sexpr.parse:print_parsed_loss_sexpr"
torch-sexpr-parse-optimizer = "torch_sexpr.parse:print_parsed_optimizer_sexpr"
torch-sexpr-parse-architecture = "torch_sexpr.parse:print_parsed_architecture_sexpr"
torch-sexpr-list-losses = "torch_sexpr.parse:print_available_losses"
torch-sexpr-list-optimizers = "torch_sexpr.parse:print_available_optimizers"
torch-sexpr-list-layers = "torch_sexpr.parse:print_available_layers"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
